--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hapi-api-key",
+  "name": "@sedicii/hapi-api-key",
   "version": "3.3.0",
   "description": "Authentication strategy for API keys",
   "main": "index.js",
