--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/firstandthird/hapi-api-key.git"
+    "url": "git+https://github.com/sedicii/hapi-api-key.git"
   },
   "bugs": {
-    "url": "https://github.com/firstandthird/hapi-api-key/issues"
+    "url": "https://github.com/sedicii/hapi-api-key/issues"
   },
-  "homepage": "https://github.com/firstandthird/hapi-api-key",
+  "homepage": "https://github.com/sedicii/hapi-api-key",
   "dependencies": {
     "@hapi/hoek": "^6.1.3",
     "@hapi/boom": "^7.4.3"
